[package]
name = "caked"
version = "0.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gabbyzhat/caked"
documentation = "https://docs.rs/caked"
description = "CakePHP style configuration reading and writing"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Gabriel Zhat <gabbyzhat@gmail.com>"
]

[features]

[dependencies]
enumflags2 = "0.7.1"

[dev-dependencies]
